Fireworks: Introduce RGB accenter 3.0 [2/2]
-- base on PixelDust-Eleven/android_packages_apps_Themes@0088666#diff-c1ad049f74f3050973e09eb988619884ef3f371a0014e905c32f42594be210c1

Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -199,4 +199,8 @@
     <string name="color_right_arrow" translatable="false">"→"</string>
     <string name="color_down_arrow" translatable="false">"↓"</string>
     <string name="longpress_info">Longpress box to save color</string>
+
+    <!-- RGB Accenter 3.0-->
+    <string name="rgb_accent_picker_title">RGB accent picker</string>
+    <string name="rgb_accent_picker_summary">Choose the accent color yourself</string>
 </resources>
