KryptonSettings: rework parts of gaming mode and fod settings
* use a recyclerview for displaying the list of apps to choose for gaming mode
* switched to a fragment instead of an activity for fod settings
* flattened the fod settings layout with a much effecient constraint layout
* use a recyclerview for displaying the list of available fod icons and anims
* added more helper functions in Utils
* cleaned up resources and other miscellaneous changes

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,7 +51,8 @@
     <string name="fod_icon_settings_title">Select FOD Icon</string>
     <string name="fod_animation_switch_title">FOD Animation</string>
     <string name="fod_animation_settings_title">Select FOD Animation</string>
-    <string name="fod_animation_always_on_switch_title">Enable FOD Animation for all use cases</string>
+    <string name="fod_animation_always_on_switch_title">Show FOD animation in all use cases</string>
+    <string name="loading_animations">FOD animations are loading, please wait for preview</string>
 
     <!-- StatusBar-QS Settings -->
     <string name="statusbar_qs_settings_title">StatusBar and QS</string>
