--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,13 +71,15 @@
     <!-- StatusBar-QS Settings -->
     <string name="statusbar_qs_settings_title">StatusBar and QS</string>
     <string name="statusbar_qs_settings_summary">Customisations and gestures for statusbar and qs</string>
-    <string name="statusbar_gestures_category_title">Getsures</string>
+    <string name="statusbar_miscellaneous_category_title">Miscellaneous</string>
     <string name="statusbar_dt2s_title">Double tap on statusbar to sleep</string>
     <string name="brightness_slider_category_title">Brightness Slider</string>
     <string name="qs_show_slider_title">Show brightness slider in qs</string>
     <string name="qs_show_auto_brightness_icon_title">Show auto brightness icon in qs</string>
     <string name="qs_show_slider_bottom_title">Keep brightness slider at the bottom</string>
     <string name="qs_show_slider_above_footer_title">Keep brightness slider above qs footer</string>
+    <string name="statusbar_show_notification_count_title">Statusbar notification count</string>
+    <string name="statusbar_show_notification_count_summary">Show pending notification count in statusbar</string>
 
     <!-- Network Traffic -->
     <string name="network_traffic_category_title">Network Traffic</string>
