--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -157,4 +157,9 @@
     <string name="reset">Reset</string>
     <string name="invalid_integer_value">Please input a valid integer!</string>
     <string name="cannot_resolve_activity">Unable to find a suitable activity to perform the action!</string>
+
+    <!-- Notification Media Options -->
+    <string name="media_category">Media Notification options</string>
+    <string name="artwork_media_background_title">Artwork media background</string>
+    <string name="artwork_media_background_summary">Set media artwork as notification media background</string>
 </resources>
