--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -162,4 +162,6 @@
     <string name="media_category">Media Notification options</string>
     <string name="artwork_media_background_title">Artwork media background</string>
     <string name="artwork_media_background_summary">Set media artwork as notification media background</string>
+    <string name="artwork_media_background_enable_blur_title">Enable to blur media artwork background</string>
+    <string name="artwork_media_background_blur_radius_title">Adjust the blur radius for artwork</string>
 </resources>
